--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ addons:
   apt:
     packages:
       - openjdk-8-jre
-  postgresql: "9.4"
+  postgresql: "9.5"
 
 notifications:
   email:
@@ -40,6 +40,10 @@ env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
   - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
   - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+  - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+  - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+  - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+  - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
   - DB=pgsql MOODLE_BRANCH=master ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
   - DB=pgsql MOODLE_BRANCH=master ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
   - DB=pgsql MOODLE_BRANCH=master ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
@@ -54,6 +58,22 @@ matrix:
     - php: 7.0
       env: DB=pgsql MOODLE_BRANCH=master ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
     - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=master ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=master ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=master ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=master ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+    - php: 7.1
       env: DB=pgsql MOODLE_BRANCH=master ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
     - php: 7.0
       env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
@@ -74,7 +94,7 @@ before_install:
 install:
   - moodle-plugin-ci add-plugin catalyst/moodle-local_aws
   - moodle-plugin-ci install -vvv
- 
+
 before_script:
   - sleep 10
 
@@ -87,4 +107,3 @@ script:
   - moodle-plugin-ci shifter
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat      # No tests yet
-
