--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ addons:
   apt:
     packages:
       - openjdk-8-jre
-  postgresql: "9.5"
+  postgresql: "9.6"
 
 notifications:
   email:
@@ -21,6 +21,8 @@ php:
   - 7.0
   - 7.1
   - 7.2
+  - 7.3
+  - 7.4
 
 env:
  global:
@@ -32,10 +34,6 @@ env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
   - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
   - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
-  - DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
-  - DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
-  - DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
-  - DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
   - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
   - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
   - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
@@ -44,6 +42,10 @@ env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
   - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
   - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+  - DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+  - DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+  - DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+  - DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
   - DB=pgsql MOODLE_BRANCH=master ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
   - DB=pgsql MOODLE_BRANCH=master ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
   - DB=pgsql MOODLE_BRANCH=master ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
@@ -60,6 +62,14 @@ matrix:
     - php: 7.0
       env: DB=pgsql MOODLE_BRANCH=master ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
     - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+    - php: 7.0
       env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
     - php: 7.0
       env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
@@ -67,6 +77,14 @@ matrix:
       env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
     - php: 7.0
       env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
     - php: 7.1
       env: DB=pgsql MOODLE_BRANCH=master ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
     - php: 7.1
@@ -75,20 +93,53 @@ matrix:
       env: DB=pgsql MOODLE_BRANCH=master ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
     - php: 7.1
       env: DB=pgsql MOODLE_BRANCH=master ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
-    - php: 7.0
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+
+    - php: 7.3
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+    - php: 7.3
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+    - php: 7.3
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+    - php: 7.3
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+    - php: 7.4
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
+    - php: 7.4
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
+    - php: 7.4
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
+    - php: 7.4
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
+    - php: 7.4
       env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=5.5.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.5.0.deb
-    - php: 7.0
+    - php: 7.4
       env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.0.0 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.0.0.deb
-    - php: 7.0
+    - php: 7.4
       env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.4.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.4.1.deb
-    - php: 7.0
+    - php: 7.4
       env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE ESVER=6.6.1 ESURL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.6.1.deb
 
 before_install:
   - curl -O ${ESURL} && sudo dpkg -i --force-confnew elasticsearch-${ESVER}.deb && sudo service elasticsearch restart
   - cd ../..
   - composer selfupdate
-  - composer create-project -n --no-dev moodlerooms/moodle-plugin-ci ci ^1
+  - composer create-project -n --no-dev moodlehq/moodle-plugin-ci ci ^1
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
@@ -100,10 +151,7 @@ before_script:
 
 script:
   - moodle-plugin-ci phplint
-#  - moodle-plugin-ci phpcpd
-# - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
   - moodle-plugin-ci validate
   - moodle-plugin-ci shifter
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat      # No tests yet
