[#78] chore: ci usage alignment and cleanup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: Run all tests for moodle 35 to 39
+name: ci
 
 on: [push, pull_request]
 
 jobs:
-  workflow_group_35_to_39_ci:
-    uses: catalyst/catalyst-moodle-workflows/.github/workflows/group-35-to-39-ci.yml@main
+  ci:
+    uses: catalyst/catalyst-moodle-workflows/.github/workflows/ci.yml@main
     with:
       extra_plugin_runners: 'moodle-plugin-ci add-plugin catalyst/moodle-local_aws'
       disable_grunt: true
