--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: Run all tests for Moodle 310+
+name: ci
 
 on: [push, pull_request]
 
 jobs:
-  workflow_group_310_plus_ci:
-    uses: catalyst/catalyst-moodle-workflows/.github/workflows/group-310-plus-ci.yml@main
+  ci:
+    uses: catalyst/catalyst-moodle-workflows/.github/workflows/ci.yml@main
     with:
       extra_plugin_runners: 'moodle-plugin-ci add-plugin catalyst/moodle-local_aws'
       disable_grunt: true
